# last_api_axum

./: .gitignore  Cargo.toml  README.md  database.db-shm  database.db-wal
src/: db.rs  main.rs  model.rs  routes.rs
src/repositories/: licenses_repository.rs  mod.rs  users_repository.rs
src/routes/: licenses_routes.rs  mod.rs  users_routes.rs
src/services/: licenses_service.rs  mod.rs  users_service.rs
